# DGtalTools

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  README  README.md  appveyor.yml  conanfile.txt  dgtal-config.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.travis/: dgtal_rsa.enc  install_deps_macos.sh  install_doxygen.sh  install_eigen.sh  publish_doc.sh
2dContourTools/: CMakeLists.txt  curvatureBC.cpp  curvatureMCMS.cpp  displayContours.cpp  freeman2sdp.cpp  pgm2freeman.cpp  tangentBC.cpp
cmake/: AddToolsFunction.cmake  FindNetPBM.cmake  TargetDoxygenDoc.cmake  create_whitelist.sh  polyscope.cmake  whiteListBuildTools.txt
converters/: CMakeLists.txt  HDF52vol.cpp  convertVol.cpp  dicom2raw32.cpp  dicom2vol.cpp  freeman2img.cpp  freeman2pgm.cpp  freeman2sdp.cpp  heightfield2shading.cpp  heightfield2vol.cpp  imageVectorisationSave.cpp  imageVectorizer.cpp  img2freeman.cpp  imgAddNoise.cpp  itk2vol.cpp  longvol2vol.cpp  mesh2heightfield.cpp  mesh2vol.cpp  ofs2off.cpp  pgm2freeman.cpp  raw2HDF5.cpp  raw2vol.cpp  sdp2poly.cpp  sdp2sdp.cpp  sdp2vol.cpp  slice2vol.cpp  testClipping.cpp  vol2heightfield.cpp  vol2mip.cpp  vol2obj.cpp  vol2off.cpp  vol2raw.cpp  vol2sdp.cpp  vol2slice.cpp  vol2vox.cpp  volAddNoise.cpp  volBoundary2obj.cpp  vox2vol.cpp
distanceTransform/: BaseDistanceDT.cpp  BaseDistanceDT.h  CMakeLists.txt  CumulativeSequence.cpp  CumulativeSequence.h  CumulativeSequenceTest.cpp  D4DistanceDT.cpp  D4DistanceDT.h  D8DistanceDT.cpp  D8DistanceDT.h  ImageFilter.cpp  ImageFilter.h  ImageReader.h  ImageWriter.cpp  ImageWriter.h  LUTBasedNSDistanceTransform.cpp  LUTBasedNSDistanceTransformConfig.h  NeighborhoodSequenceDistance.cpp  NeighborhoodSequenceDistance.h  PBMImageReader.cpp  PBMImageReader.h  PGMImageWriter.cpp  PGMImageWriter.h  PNGImageReader.cpp  PNGImageReader.h  PNGImageWriter.cpp  PNGImageWriter.h  PeriodicNSDistanceDT.cpp  PeriodicNSDistanceDT.h  RatioNSDistanceDT.cpp  RatioNSDistanceDT.h  RationalBeattySequence.h  RationalBeattySequenceTest.cpp  sequenceTest.h
doc/: DGtoolsCustomDoxygen.css  DoxygenLayout.xml  (+12 more)
estimators/: 2dLocalEstimators.cpp  3dCurveTangentEstimator.cpp  3dLocalEstimators.cpp  CMakeLists.txt  curvatureBC.cpp  curvatureMCMS.cpp  curvatureScaleSpace.cpp  curvatureScaleSpaceBCC.cpp  curvatureScaleSpaceIIM.cpp  estimatorComparator.cpp  eulerCharacteristic.cpp  generic3dNormalEstimators.cpp  lengthEstimators.cpp  localEstimators.cpp  statisticsEstimators.cpp  surfaceApprox.cpp  surface_approx.cpp  surface_extract.ih  tangentBC.cpp  vol2normalField.cpp  volSurfaceRegularization.cpp
estimators/volSurfaceRegularization-details/: shape.h  surface_approx.cpp  surface_approx.h  surface_extract.h  surface_extract.ih
imageProcessing/: ATVu2v0.h  ATVu2v0.ih  ATu0v1.h  ATu0v1.ih  ATu2v0-m.h  ATu2v0-m.ih  ATu2v0.h  ATu2v0.ih  CMakeLists.txt  DECHelpers.h  DECImageHelpers.h  at-u0-v1.cpp  at-u2-v0-m.cpp  at-u2-v0.cpp  atv-u2-v0.cpp
imageProcessing/Images/: DegradeBruit128.pgm  DegradeBruit32.pgm  DegradeBruit64.pgm  barbara-cropped-b01.pgm  camel.ppm  carre2Degradesb00.pgm  carre2Degradesb02.pgm  carre2Degradesb04.pgm  carre2Degradesb08.pgm  degrade-b01.pgm  degrade-b02.pgm  degrade-b04.pgm  degrade.pgm  degradec-b02.ppm  degradec-b03.ppm  degradec-b04.ppm  degradec.ppm  lena-370-b01.ppm  lena-370-b02.ppm  lena-370.ppm  lozenge-b4.pgm  lozenge-b8.pgm  mandrill-120.ppm  mandrill-240.ppm  mask-big-disc.pgm  mask-camel.pgm  mask-disc.pgm  mask-scribble.pgm  mask-text.pgm  quadruple-45-color.ppm  quadruple-color.ppm  triple-color-b04.ppm  triple-color-b06.ppm  triple-color-b08.ppm  triple-color.ppm
imageProcessing/Images/CarreSimple/: Carre128.pgm  Carre16.pgm  Carre256.pgm  Carre32.pgm  Carre512.pgm  Carre64.pgm  Carre8.pgm  CarreBruit128.pgm  CarreBruit16.pgm  CarreBruit256.pgm  CarreBruit32.pgm  CarreBruit512.pgm  CarreBruit64.pgm  CarreBruit8.pgm  carrec1024.ppm  carrec128.ppm  carrec256.ppm  carrec32.ppm  carrec512.ppm  carrec64.ppm  convert.sh  plein128.ppm  plein256.ppm  plein32.ppm  plein512.ppm  plein64.ppm
imageProcessing/Images/Lena/: Lena800.ppm  LenaBruit128.ppm  LenaBruit256.ppm  LenaBruit32.ppm  LenaBruit512.ppm  LenaBruit64.ppm  lena-b01-128.ppm  lena-b01-256.ppm  lena-b01-32.ppm  lena-b01-64.ppm  lena-b02-128.ppm  lena-b02-256.ppm  lena-b02-32.ppm  lena-b02-64.ppm  lena256.ppm  lena_noisy.ppm  lena_noisy128.ppm  lena_noisy256.ppm  lena_noisy32.ppm  lena_noisy64.ppm
imageProcessing/Images/PyramidePapillon/: Papillon128.ppm  Papillon16.ppm  Papillon256.ppm  Papillon32.ppm  Papillon4.ppm  Papillon64.ppm  Papillon8.ppm  convert.sh
imageProcessing/Images/Square/: square.pgm  square128.pgm  square256.pgm  square32.pgm  square64.pgm  square_noisy.pgm  square_noisy128.pgm  square_noisy256.pgm  square_noisy32.pgm  square_noisy64.pgm
surfaceTools/: CMakeLists.txt  meshViewer.cpp  ofs2off.cpp
visualisation/: 2d3dImageViewer.cpp  2d3dImageViewer.h  2d3dImageViewer.ui  2dCompImage.cpp  3dCompSurfelData.cpp  3dCurvatureViewer.cpp  3dCurvatureViewerNoise.cpp  3dCurveViewer.cpp  3dDisplaySurfelData.cpp  3dHeightMapViewer.cpp  3dImageViewer.cpp  3dImplicitSurfaceExtractorBy4DExtension.cpp  3dImplicitSurfaceExtractorByThickening.cpp  3dSDPViewer.cpp  3dVolBoundaryViewer.cpp  3dVolViewer.cpp  CMakeLists.txt  displayContours.cpp  implicit-surface-extractor-3d.cpp  implicit-surface-extractor.cpp  meshViewer.cpp  patternTriangulation.cpp  sliceViewer.cpp  sliceViewer.h  sliceViewer.ui  volscope.cpp
visualisation/specificClasses/: Viewer3DImage.cpp  Viewer3DImage.h
volumetric/: 3dVolMarchingCubes.cpp  3dVolViewer.cpp  CMakeLists.txt  criticalKernelsThinning3D.cpp  homotopicThinning3D.cpp  volAddBorder.cpp  volAddNoise.cpp  volCComponentCounter.cpp  volCompare.cpp  volCompareStats.cpp  volCrop.cpp  volEuclideanDT.cpp  volFillInterior.cpp  volFlip.cpp  volImageMetrics.cpp  volInfo.cpp  volIntensityScale.cpp  volMask.cpp  volReSample.cpp  volSegment.cpp  volShapeMetrics.cpp  volSubSample.cpp  volTrValues.cpp
volumetric/voltools/: CMakeLists.txt  volAddBorder.cpp  volCComponentCounter.cpp  volCrop.cpp  volSubSample.cpp
(+27 files in other folders)
